layout options posts + tekst post toevoegen aangepast

--- a/app/src/main/res/layout/bulletinboard.xml
+++ b/app/src/main/res/layout/bulletinboard.xml
@@ -19,7 +19,6 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
-
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/AddPostButton"
             style="@style/pinkButtonStyle"
@@ -52,7 +51,11 @@
                 app:backgroundTint="#F8A59E"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                android:elevation="10dp"
+                android:textSize="16dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginLeft="10dp"/>
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/BulletinBoardRecycler"
