--- a/app/src/main/res/layout/bulletinboard_text_post_toevoegen.xml
+++ b/app/src/main/res/layout/bulletinboard_text_post_toevoegen.xml
@@ -37,7 +37,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="@string/titel"
-                    android:singleLine="true" />
+                    android:singleLine="true"
+                    android:maxLength="40"/>
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
@@ -47,13 +48,12 @@
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/textposttext"
                     android:layout_width="match_parent"
-                    android:layout_height="174dp"
+                    android:layout_height="221dp"
                     android:layout_margin="10dp"
-                    android:hint="@string/tekst"
                     android:gravity="top|left"
-                    android:lines="7"
-                    />
-
+                    android:hint="@string/tekst"
+                    android:maxLines="8"
+                    android:maxLength="350"/>
             </com.google.android.material.textfield.TextInputLayout>
 
             <Button
