--- a/app/src/main/res/layout/bulletinboard_options_add_post.xml
+++ b/app/src/main/res/layout/bulletinboard_options_add_post.xml
@@ -66,7 +66,8 @@
                                 android:layout_height="72dp"
 
                                 android:clickable="false"
-                                android:text="@string/audio" />
+                                android:text="@string/audio"
+                                android:textColor="#9E9797" />
 
                             <Button
                                 android:id="@+id/FotoButton"
@@ -75,7 +76,8 @@
                                 android:layout_height="72dp"
 
                                 android:clickable="false"
-                                android:text="@string/Image" />
+                                android:text="@string/Image"
+                                android:textColor="#9E9797" />
 
 
                         </TableRow>
@@ -93,7 +95,8 @@
                                 android:layout_width="137dp"
                                 android:layout_height="72dp"
                                 android:clickable="false"
-                                android:text="@string/video" />
+                                android:text="@string/video"
+                                android:textColor="#9E9797" />
 
                             <Button
                                 android:id="@+id/TekstButton"
@@ -132,7 +135,8 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="72dp"
                                 android:clickable="false"
-                                android:text="@string/skyscraper" />
+                                android:text="@string/skyscraper"
+                                android:textColor="#9E9797" />
 
                             <Button
                                 android:id="@+id/cinemaButton"
@@ -140,7 +144,8 @@
                                 android:layout_width="140dp"
                                 android:layout_height="72dp"
                                 android:clickable="false"
-                                android:text="@string/cinema" />
+                                android:text="@string/cinema"
+                                android:textColor="#9E9797" />
                         </TableRow>
 
                         <TableRow
@@ -156,7 +161,8 @@
                                 android:layout_height="72dp"
                                 android:layout_marginEnd="7dp"
                                 android:clickable="false"
-                                android:text="@string/treasure_chest" />
+                                android:text="@string/treasure_chest"
+                                android:textColor="#9E9797" />
 
                             <Button
                                 android:id="@+id/rugzakButton"
@@ -164,7 +170,8 @@
                                 android:layout_width="137dp"
                                 android:layout_height="72dp"
                                 android:clickable="false"
-                                android:text="@string/backpack" />
+                                android:text="@string/backpack"
+                                android:textColor="#9E9797" />
                         </TableRow>
 
                     </TableLayout>
