--- a/app/src/main/res/layout/bulletinboard_text_post_toevoegen.xml
+++ b/app/src/main/res/layout/bulletinboard_text_post_toevoegen.xml
@@ -12,21 +12,26 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="?attr/actionBarSize" >
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:layout_marginTop="?attr/actionBarSize" >
+            android:orientation="vertical" >
 
 
             <TextView
                 android:layout_width="388dp"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
+                android:gravity="center"
                 android:text="@string/nieuwe_tekst_post_toevoegen"
+                android:textAlignment="center"
                 android:textSize="20sp"
-                android:textStyle="bold"
-                android:gravity="center"/>
+                android:textStyle="bold" />
             <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -52,8 +57,8 @@
                     android:layout_margin="10dp"
                     android:gravity="top|left"
                     android:hint="@string/tekst"
-                    android:maxLines="8"
-                    android:maxLength="350"/>
+                    android:maxLines="10"
+                    android:maxLength="500"/>
             </com.google.android.material.textfield.TextInputLayout>
 
             <Button
@@ -63,6 +68,7 @@
                 android:layout_margin="10dp"
                 android:text="@string/toevoegen" />
         </LinearLayout>
+        </ScrollView>
     </FrameLayout>
 
 </layout>
