--- a/app/src/main/res/values/buttonStyle.xml
+++ b/app/src/main/res/values/buttonStyle.xml
@@ -7,6 +7,7 @@
     <style name="buttonStyle">
         <item name="android:textColor">@color/colorAccent</item>
         <item name="backgroundTint" >@color/cardview_light_background</item>
-
+       <item name="android:textSize">14sp</item>
+        <item name="android:layout_marginEnd">10dp</item>
     </style>
 </resources>
