--- a/app/src/main/res/layout/billboard_goal.xml
+++ b/app/src/main/res/layout/billboard_goal.xml
@@ -9,22 +9,29 @@
             name="property"
             type="com.example.faithandroid.models.GoalPost" />
     </data>
+
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent" >
+        android:layout_height="match_parent"
+        android:fadingEdgeLength="10dp">
         <!--tools:context="."-->
 
 
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            >
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="5dp"
+            android:fadingEdgeLength="10dp"
+            app:cardElevation="10dp">
 
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                >
+                android:fadingEdgeLength="10dp"
+                android:outlineAmbientShadowColor="#FFFFFF"
+                android:outlineSpotShadowColor="#090909">
 
                 <TextView
                     android:id="@+id/description"
@@ -37,15 +44,18 @@
                     android:text="@{property.description}"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toEndOf="@+id/profilepicture"
+                    app:layout_constraintStart_toEndOf="@+id/cardprofile"
                     app:layout_constraintTop_toBottomOf="@+id/button" />
 
 
                 <Button
                     android:id="@+id/button"
-                    android:layout_width="72dp"
-                    android:layout_height="37dp"
-                    android:text="X"
+                    style="@style/Widget.MaterialComponents.Button.TextButton"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    app:icon="@drawable/ic_close"
+                    app:iconPadding="0dp"
+                    app:iconSize="50dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
@@ -61,28 +71,38 @@
                     app:flow_horizontalAlign="center"
                     app:layout_constraintBottom_toTopOf="@+id/description"
                     app:layout_constraintEnd_toStartOf="@+id/button"
-                    app:layout_constraintStart_toEndOf="@+id/profilepicture"
+                    app:layout_constraintStart_toEndOf="@+id/cardprofile"
                     app:layout_constraintTop_toTopOf="parent" />
 
-                <ImageView
-                    android:id="@+id/profilepicture"
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/cardprofile"
                     android:layout_width="100dp"
                     android:layout_height="100dp"
                     android:layout_marginStart="10dp"
                     android:layout_marginTop="20dp"
                     android:layout_marginBottom="10dp"
-                    android:contentDescription="@string/profiel"
-                    android:src="@drawable/profielfoto"
+                    android:outlineAmbientShadowColor="#FFFFFF"
+                    app:cardCornerRadius="250dp"
                     app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toStartOf="@+id/description"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
+                    app:layout_constraintTop_toTopOf="parent">
+
+                    <ImageView
+                        android:id="@+id/profilepicture"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+
+                        android:contentDescription="@string/profiel"
+                        android:src="@drawable/profielfoto"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+                </androidx.cardview.widget.CardView>
 
             </androidx.constraintlayout.widget.ConstraintLayout>
-            <TableRow
-                android:id="@+id/hr1"
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="#444"></TableRow>
+
+
         </androidx.cardview.widget.CardView>
 
     </FrameLayout>
