--- a/app/src/main/res/layout/bulletinboard_text_post_toevoegen.xml
+++ b/app/src/main/res/layout/bulletinboard_text_post_toevoegen.xml
@@ -2,6 +2,12 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <data>
+        <variable
+            name="placeType"
+            type="String" />
+    </data>
+
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -28,7 +34,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
                 android:gravity="center"
-                android:text="@string/nieuwe_tekst_post_toevoegen"
+                android:text= '@{placeType}'
                 android:textAlignment="center"
                 android:textSize="20sp"
                 android:textStyle="bold" />
