--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <group>
+    <group android:checkableBehavior="single">
         <item android:id="@+id/nav_options"
             android:icon="@drawable/ic_tool"
             android:title="@string/instellingen" />
-        <item android:id="@+id/nav_profile"
+        <item
+            android:id="@+id/nav_profile"
+            android:enabled="true"
             android:icon="@drawable/ic_person"
             android:title="@string/profiel" />
         <item android:id="@+id/nav_logout"
