--- a/app/src/main/res/layout/app_drawer_layout.xml
+++ b/app/src/main/res/layout/app_drawer_layout.xml
@@ -6,10 +6,10 @@
         android:layout_width="match_parent"
       android:layout_height="match_parent">
 
-       <include
-            layout="@layout/app_bar_main"
-            android:layout_width="match_parent"
-           android:layout_height="match_parent"></include>
+    <include
+        layout="@layout/app_bar_main"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
     <com.google.android.material.navigation.NavigationView
         android:id="@+id/navView"
