--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -5,11 +5,13 @@
             android:icon="@drawable/ic_tool"
             android:title="@string/instellingen" />
         <item
-            android:id="@+id/nav_profile"
+            android:id="@+id/profielFragment"
+            android:checkable="false"
             android:enabled="true"
             android:icon="@drawable/ic_person"
-            android:title="@string/profiel" />
-        <item android:id="@+id/nav_logout"
+            android:title="@string/profiel"
+            android:visible="true" />
+        <item android:id="@+id/loginFragment"
             android:icon="@drawable/ic_leave"
             android:title="@string/uitloggen" />
     </group>
