--- a/app/src/main/res/layout/activity_test.xml
+++ b/app/src/main/res/layout/activity_test.xml
@@ -9,14 +9,14 @@ xmlns:app="http://schemas.android.com/apk/res-auto">
 
 
 
-        <fragment
+        <androidx.fragment.app.FragmentContainerView
             android:id="@+id/NavHostFragment"
             android:name="androidx.navigation.fragment.NavHostFragment"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
 
             app:defaultNavHost="true"
-            app:navGraph="@navigation/navigation"></fragment>
+            app:navGraph="@navigation/navigation"></androidx.fragment.app.FragmentContainerView>
 
         <com.google.android.material.navigation.NavigationView
             android:id="@+id/navView"
