--- a/app/src/main/res/layout/app_nav_header_main.xml
+++ b/app/src/main/res/layout/app_nav_header_main.xml
@@ -1,6 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    >
+
+    <data>
+        <variable
+            name="adolescent"
+            type="com.example.faithandroid.login.uilogin.LoginViewModel" />
+    </data>
+
+<LinearLayout
+
     android:id="@+id/nav_header"
     android:layout_width="match_parent"
     android:layout_height="160dp"
@@ -12,6 +23,8 @@
     android:orientation="vertical"
     android:padding="16dp"
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
+
+
 
     <androidx.cardview.widget.CardView
         android:layout_width="68dp"
@@ -40,7 +53,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingTop="10dp"
-        android:text="@string/naam"
+        android:text="@{adolescent.adolescent.firstName}"
         android:textStyle="bold"
         android:textSize="20dp"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
@@ -56,3 +69,4 @@
 
 
 </LinearLayout>
+</layout>
