implementatie afwerken, nog niet kunnen testen

--- a/app/src/main/res/layout/profiel_changepassword.xml
+++ b/app/src/main/res/layout/profiel_changepassword.xml
@@ -18,26 +18,34 @@
             android:layout_marginStart="25dp"
             android:layout_marginEnd="25dp">
 
-            <TextView
-                android:id="@+id/oudwwtxt"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/oud_wachtwoord" />
 
-            <EditText
+
+            <com.google.android.material.textfield.TextInputLayout
+                app:errorEnabled="true"
+                android:layout_margin="5dp"
+                android:id="@+id/oudwwfldLayout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/oud_wachtwoord">
+
+            <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/oudwwfld"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
                 android:inputType="textPassword" />
 
-            <TextView
-                android:id="@+id/nieuwwwtxt"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/nieuw_wachtwoord" />
+            </com.google.android.material.textfield.TextInputLayout>
 
-            <EditText
+            <com.google.android.material.textfield.TextInputLayout
+                app:errorEnabled="true"
+                android:layout_margin="5dp"
+                android:id="@+id/nieuwwwfldLayout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/nieuw_wachtwoord">
+
+            <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/nieuwwwfld"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -45,18 +53,26 @@
                 android:inputType="textPassword"
                 />
 
-            <TextView
-                android:id="@+id/nieuwwwtxtconfirm"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/nieuw_wachtwoord_confirmeren" />
+            </com.google.android.material.textfield.TextInputLayout>
 
-            <EditText
+
+            <com.google.android.material.textfield.TextInputLayout
+                app:errorEnabled="true"
+                android:layout_margin="5dp"
+                android:id="@+id/nieuwwwfldconfirmLayout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/nieuw_wachtwoord_confirmeren">
+
+
+            <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/nieuwwwfldconfirm"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
                 android:inputType="textPassword" />
+
+            </com.google.android.material.textfield.TextInputLayout>
 
         </LinearLayout>
     </androidx.cardview.widget.CardView>
