--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,5 +5,9 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
+    <style name="AppThemeDark" parent="Theme.MaterialComponents.DayNight">
+        <!-- Customize your theme here. -->
+        ...
+    </style>
 
 </resources>
