--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -43,8 +43,7 @@
         android:id="@+id/loginFragment"
         android:name="com.example.faithandroid.login.LoginFragment"
         android:label="LoginFragment"
-        tools:layout="@layout/login"
-        >
+        tools:layout="@layout/login" >
         <action
             android:id="@+id/action_loginFragment_to_homeFragment"
             app:destination="@id/homeFragment" />
