oplossen layout foto toevoegen opmaken

--- a/app/src/main/res/layout/add_photo.xml
+++ b/app/src/main/res/layout/add_photo.xml
@@ -50,10 +50,14 @@
                         style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+
+
+                        android:hint="@string/plaatsen"
                         android:layout_marginLeft="10dp">
 
                         <AutoCompleteTextView
                             android:id="@+id/dropdownPlaatsen"
+
                             android:inputType="none"
                             android:layout_width="220dp"
                             android:layout_height="wrap_content"
@@ -62,6 +66,7 @@
 
                     </com.google.android.material.textfield.TextInputLayout>
                 </LinearLayout>
+
                 <androidx.recyclerview.widget.RecyclerView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
