--- a/app/src/main/res/layout/profiel.xml
+++ b/app/src/main/res/layout/profiel.xml
@@ -18,7 +18,9 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            tools:layout_editor_absoluteX="0dp"
+            tools:layout_editor_absoluteY="0dp">
 
 
             <androidx.cardview.widget.CardView
