--- a/app/src/main/res/layout/video_toevoegen.xml
+++ b/app/src/main/res/layout/video_toevoegen.xml
@@ -1,32 +1,74 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/linear_layout"
-    android:gravity = "start">
-    <Button
-        android:id="@+id/text_post_toevoegen"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+<FrameLayout
+    android:orientation="horizontal"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
+    <include
+        layout="@layout/app_bar_back"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:text="@string/toevoegen" />
+        android:layout_height="match_parent" />
 
-<TextView
-    android:id="@+id/txtView"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:text="@string/titelspinner"
-    android:layout_marginTop="30dp"
-    android:layout_marginStart="30dp"
-    android:textSize = "20sp" />
+        <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+            android:paddingTop="20dp"
+        android:orientation="vertical"
+            android:layout_marginTop="?attr/actionBarSize">
 
-<Spinner
-    android:id="@+id/spinner"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+            <ImageView
+        android:id="@+id/videocam"
+        android:layout_width="76dp"
+        android:layout_height="63dp"
 
-</LinearLayout>
+        android:contentDescription="@string/app_name"
+        android:onClick="ClickBack"
+        app:srcCompat="@drawable/ic_videocam"
+        />
+
+    <ImageView
+        android:id="@+id/album"
+        android:layout_width="76dp"
+        android:layout_height="63dp"
+        android:contentDescription="@string/app_name"
+        android:onClick="ClickBack"
+        app:srcCompat="@drawable/ic_video_library"
+
+        />
+
+            <com.google.android.material.textfield.TextInputLayout
+                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="15dp"
+                android:hint="@string/hint_text">
+
+                <AutoCompleteTextView
+                    android:id="@+id/dropdown"
+                    android:layout_width="220dp"
+                    android:layout_height="wrap_content"
+                    android:background="@color/colorAccent"/>
+
+            </com.google.android.material.textfield.TextInputLayout>
+            </LinearLayout>
+
+
+            <androidx.gridlayout.widget.GridLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+            </androidx.gridlayout.widget.GridLayout>
+        </FrameLayout>
+</FrameLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
+
+
 
