--- a/app/src/main/res/layout/bulletinboard_options_add_post.xml
+++ b/app/src/main/res/layout/bulletinboard_options_add_post.xml
@@ -94,7 +94,7 @@
                                 style="@style/buttonStyle"
                                 android:layout_width="137dp"
                                 android:layout_height="72dp"
-                                android:clickable="false"
+                                android:clickable="true"
                                 android:text="@string/video"
                                 android:textColor="#9E9797" />
 
