--- a/app/src/main/res/layout/video_toevoegen.xml
+++ b/app/src/main/res/layout/video_toevoegen.xml
@@ -1,74 +1,81 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:android="http://schemas.android.com/apk/res/android">
-<FrameLayout
-    android:orientation="horizontal"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-    <include
-        layout="@layout/app_bar_back"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
-
-        <FrameLayout
+<layout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-            android:paddingTop="20dp"
-        android:orientation="vertical"
-            android:layout_marginTop="?attr/actionBarSize">
+        >
+        <FrameLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-            <LinearLayout
+            <include
+                layout="@layout/app_bar_back"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-            <ImageView
-        android:id="@+id/videocam"
-        android:layout_width="76dp"
-        android:layout_height="63dp"
+                android:layout_height="match_parent" />
 
-        android:contentDescription="@string/app_name"
-        android:onClick="ClickBack"
-        app:srcCompat="@drawable/ic_videocam"
-        />
-
-    <ImageView
-        android:id="@+id/album"
-        android:layout_width="76dp"
-        android:layout_height="63dp"
-        android:contentDescription="@string/app_name"
-        android:onClick="ClickBack"
-        app:srcCompat="@drawable/ic_video_library"
-
-        />
-
-            <com.google.android.material.textfield.TextInputLayout
-                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
+            <FrameLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="15dp"
-                android:hint="@string/hint_text">
+                android:layout_height="match_parent"
+                android:paddingTop="20dp"
+                android:orientation="vertical"
+                android:layout_marginTop="?attr/actionBarSize">
 
-                <AutoCompleteTextView
-                    android:id="@+id/dropdown"
-                    android:layout_width="220dp"
+                <LinearLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="@color/colorAccent"/>
+                    android:orientation="horizontal">
 
-            </com.google.android.material.textfield.TextInputLayout>
-            </LinearLayout>
+                    <ImageView
+                        android:id="@+id/videocam"
+                        android:layout_width="76dp"
+                        android:layout_height="63dp"
 
+                        android:contentDescription="@string/app_name"
+                        android:onClick="ClickBack"
+                        app:srcCompat="@drawable/ic_videocam"
+                        />
 
-            <androidx.gridlayout.widget.GridLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                    <ImageView
+                        android:id="@+id/album"
+                        android:layout_width="76dp"
+                        android:layout_height="63dp"
+                        android:contentDescription="@string/app_name"
+                        android:onClick="ClickBack"
+                        app:srcCompat="@drawable/ic_video_library"
 
-            </androidx.gridlayout.widget.GridLayout>
+                        />
+
+                    <com.google.android.material.textfield.TextInputLayout
+                        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="15dp"
+                        android:hint="@string/hint_text"
+                        >
+
+                        <AutoCompleteTextView
+                            android:id="@+id/filled_exposed_dropdown"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:inputType="none"/>
+
+                    </com.google.android.material.textfield.TextInputLayout>
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager">
+
+                    </androidx.recyclerview.widget.RecyclerView>
+                </LinearLayout>
+            </FrameLayout>
         </FrameLayout>
-</FrameLayout>
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
+
 
 
 
