--- a/app/src/main/res/layout/video_toevoegen.xml
+++ b/app/src/main/res/layout/video_toevoegen.xml
@@ -115,7 +115,7 @@
                 </androidx.recyclerview.widget.RecyclerView>
 
                 <Button
-                    android:id="@+id/button2"
+                    android:id="@+id/videoToevoegenButton"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
