--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -178,6 +178,9 @@
         <argument
             android:name="placeType"
             app:argType="com.example.faithandroid.PlaceType" />
+        <action
+            android:id="@+id/action_videoToevoegenFragment_to_bulletinBoardFragment"
+            app:destination="@id/bulletinBoardFragment" />
     </fragment>
     <fragment
         android:id="@+id/nieuweVideoPost"
