--- a/app/src/main/res/layout/fullscreen_image.xml
+++ b/app/src/main/res/layout/fullscreen_image.xml
@@ -6,17 +6,17 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".ExoPlayer">
+        tools:context=".FullScreenImage">
 
-        <com.google.android.exoplayer2.ui.PlayerView
-            android:id="@+id/playerView"
+        <ImageView
+            android:id="@+id/fullscreen_image"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            android:background="@color/darkGray"/>
+           />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
