--- a/app/src/main/res/layout/bulletinboard.xml
+++ b/app/src/main/res/layout/bulletinboard.xml
@@ -67,7 +67,7 @@
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toTopOf="@+id/requestConsultationButton"
-                app:listData="@{viewModel.postList}">
+                app:TreasurechestlistData="@{viewModel.postList}">
 
             </androidx.recyclerview.widget.RecyclerView>
 
